--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   #qr_code_scanner: ^0.6.0
   water_drop_nav_bar: ^2.0.2
   carousel_slider: ^4.0.0
-
+  swipe_cards:
 
 dev_dependencies:
   flutter_test:
